Ran through grammar checker

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ hermes: true
 <p id="typewriter">http://<span id="hermes">foo</span>.js.org</p>
    <p class="bigger">Are you a JavaScript developer looking for free webspace to host your project? Check out <strong><a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">GitHub Pages</a></strong>. To make things perfect we provide you with a free and sleek URL as shown in the examples above.</p>
     
-<p>Important: As the owner of the repository you keep complete control over your published content. That also means that all rights and duties that come along with publishing a GitHub Page remain your duty.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
+<p>Important: As the owner of the repository, you keep complete control over your published content. That also means that all rights and duties that come along with publishing a GitHub Page remain in your responsibility.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
    <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organization- or Project-Page. (...as long as you provide some reasonable content!)</p>
 
    <section>
