--- a/index.html
+++ b/index.html
@@ -1,44 +1,123 @@
----
-layout: default
-claim: Providing nice and free domains for GitHub Pages since 2015
-ghstars: dns.js.org
-zodiac: true
-hermes: true
----
-<p id="typewriter">http://<span id="hermes">foo</span>.js.org</p>
-   <p class="bigger">Are you a JavaScript developer looking for free webspace to host your project? Check out <strong><a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">GitHub Pages</a></strong>. To make things perfect we provide you with a free and sleek URL as shown in the examples above.</p>
-    
-<p>Important: As the owner of the repository, you keep complete control over your published content. That also means that all rights and duties that come along with publishing a GitHub Page remain in your responsibility.<br>Have a look at our <strong><a title="Terms and Conditions" href="terms.html">Terms of Service</a></strong> for more details.</p>
-   <p>Just follow these four steps to get your own free JS.ORG subdomain for your GitHub Page. We don't mind whether it's a User-, Organization- or Project-Page. (...as long as you provide some reasonable content!)</p>
+<!DOCTYPE html>
+<html lang="en">
 
-   <section>
-      <input id="s1I" type="radio" name="steps" checked="">
-      <article id="step1">
-         <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page by following the instructions <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator with one of the provided themes and add some content to your new page.
-      </article>
-      <input id="s2I" type="radio" name="steps">
-      <article id="step2">
-         <h3>2</h3>Now determine your js.org subdomain: either choose your username or the name of your repo according to the existing GitHub Pages URL (for http://foo.github.io/bar, either "foo.js.org" or "bar.js.org" would be possible). More details in the <a rel="nofollow" target="_blank" href="https://github.com/js-org/dns/wiki">wiki</a>.
-      </article>
-      <input id="s3I" type="radio" name="steps">
-      <article id="step3">
-         <h3>3</h3>Add a file named "CNAME" to your repo (in the "gh-pages" branch for project pages) with a single line matching the domain you have chosen (e.g. "foo.js.org" without quotes). If you face any problems, check out the section <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/#creating-and-committing-a-cname-file">Custom URLs</a> at GitHub Pages Help.
-      </article>
-      <input id="s4I" type="radio" name="steps">
-      <article id="step4">
-         <h3>4</h3>To finish the procedure, make a pull request in our GitHub <a rel="nofollow" target="_blank" href="https://github.com/js-org/dns/tree/master">repository</a> that adds your subdomain to the list of existing JS.ORG domains. Your new URL should go live within 24 hours (keep an eye on your pull request in case of a naming conflict).
-      </article>
-      <nav>
-         <label id="s1L" for="s1I">1</label>
-         <label id="s2L" for="s2I">2</label>
-         <label id="s3L" for="s3I">3</label>
-         <label id="s4L" for="s4I">4</label>
-      </nav>
-   </section>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-   <h4>We truly appreciate your support by spreading some code!</h4>
-   <code>
-      &lt;a href="http://js.org" <wbr>target="_blank" <wbr>title="JS.ORG | JavaScript Community"&gt;<br>
-      &lt;img src="http://logo.js.org/dark_horz.png" <wbr>width="102" <wbr>alt="JS.ORG Logo"/&gt;<wbr>&lt;/a&gt;<br>
-      &lt;!-- alternatives [bright|dark]_[horz|vert|tiny].png (width[horz:102,vert:50,tiny:77]) --&gt;
-   </code>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>JS.ORG - the JavaScript organization</title>
+    <meta name="description" content="Dedicated to JavaScript and its awesome community since 2015">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/icon/favicon-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/icon/favicon-96.png" sizes="96x96">
+    <meta name="theme-color" content="#FFE70B">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/icon/apple-120.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/icon/apple-152.png">
+    <link rel="apple-touch-icon-precomposed" sizes="167x167" href="/icon/apple-167.png">
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/icon/apple-180.png">
+    <meta name="application-name" content="JS.ORG">
+    <meta name="msapplication-config" content="/browserconfig.xml">
+
+    <link href="style.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <table class="hf">
+        <tbody>
+            <tr class="icon">
+                <td class="logo">
+                    <a title="JS.ORG | Dedicated to JavaScript and its awesome community since 2015" href="/">&#xe600;
+                        <span>&#xe601;</span>
+                    </a>
+                </td>
+                <td>
+                    <a class="tw" title="Twitter" rel="nofollow" target="_blank" href="https://twitter.com/JS_ORG">&#xe611;</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <p id="typewriter">http://
+        <span id="hermes">foo</span>.js.org</p>
+    <p class="bigger">Are you a JavaScript developer looking for free webspace to host your project?
+        <br>Check out
+        <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">GitHub Pages</a>. To make things perfect we provide you with a free and sleek URL as shown in the examples above.</p>
+    <p> We don't mind whether it's a User-, Organization- or Project-Page - as long as you provide some reasonable content! Just
+        follow these four steps to get your own free JS.ORG subdomain for your GitHub Page:</p>
+
+    <section>
+        <input id="s1I" name="step" type="radio" checked="checked">
+        <article>
+            <h3>1</h3>If you haven't already, now it's time to log in to your GitHub account and set up your GitHub Page by following
+            the instructions
+            <a title="GitHub Pages" rel="nofollow" target="_blank" href="https://pages.github.com/">here</a>. To get a head start you can simply use the generator with one of the provided themes and add some content
+            to your new page.
+        </article>
+        <input id="s2I" name="step" type="radio">
+        <article>
+            <h3>2</h3>Now you should determine your js.org subdomain: either choose your username or the name of your repo according
+            to the existing GitHub Pages URL (for http://foo.github.io/bar, either "foo.js.org" or "bar.js.org" would be
+            possible). More details in the
+            <a title="JS.ORG's Wiki" rel="nofollow" target="_blank" href="https://github.com/js-org/dns/wiki">wiki</a>.
+        </article>
+        <input id="s3I" name="step" type="radio">
+        <article>
+            <h3>3</h3>Add a file named "CNAME" to your repo (in the "gh-pages" branch for project pages) with a single line matching
+            the domain you have chosen (e.g. "foo.js.org" without quotes). If you face any problems, check out the section
+            about
+            <a title="GitHub Pages Help" rel="nofollow" target="_blank" href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/#creating-and-committing-a-cname-file">Custom URLs</a> at GitHub Pages Help.
+        </article>
+        <input id="s4I" name="step" type="radio">
+        <article>
+            <h3>4</h3>To finish the procedure, make a pull request in our GitHub
+            <a rel="nofollow" target="_blank" href="https://github.com/js-org/dns/tree/master">repository</a> that adds your subdomain to the list of existing JS.ORG domains. Your new URL should go live within
+            24 hours (keep an eye on your pull request in case of a naming conflict or a question from our side).
+        </article>
+        <nav>
+            <label id="s1L" for="s1I">1</label>
+            <label id="s2L" for="s2I">2</label>
+            <label id="s3L" for="s3I">3</label>
+            <label id="s4L" for="s4I">4</label>
+        </nav>
+    </section>
+
+    <p>
+        <em>Important</em> As the owner of the repository, you keep complete control over your published content. That also means
+        that all rights and duties that come along with publishing a GitHub Page (e.g. GDPR) remain in your responsibility.
+        <br>Have a look at our
+        <a title="Terms and Conditions" href="https://dns.js.org/terms.html">Terms and Conditions</a> for more details.</p>
+
+    <table class="hf">
+        <tbody>
+            <tr class="icon">
+                <td class="logo small icon">
+                    <a title="JS.ORG | Dedicated to JavaScript and its awesome community since 2015" href="/">&#xe600;
+                        <span>&#xe602;</span>
+                    </a>
+                </td>
+                <td>
+                    <a class="gh" title="GitHub" rel="nofollow" target="_blank" href="https://github.com/js-org/dns.js.org">&#xe613;
+                        <span id="ghstars" style="display: inline-block;"></span>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" class="hr at">
+                    <a href="/privacy.html" title="Privacy">Privacy</a>&nbsp;
+                    <a href="/imprint.html" title="Imprint">Imprint</a>
+                    <span>Photo:
+                        <a title="'Bright As Yellow' by Jeremy Brooks on flickr" target="_blank" rel="nofollow" href="https://flic.kr/p/ptpZJR">Jeremy Brooks</a>
+                    </span>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <script src="/main.js" defer></script>
+
+</body>
+
+</html>
