--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <em>Important</em> As the owner of the repository, you keep complete control over your published content. That also means
         that all rights and duties that come along with publishing a GitHub Page (e.g. GDPR) remain in your responsibility.
         <br>Have a look at our
-        <a title="Terms and Conditions" href="https://dns.js.org/terms.html">Terms and Conditions</a> for more details.</p>
+        <a title="Terms and Conditions" href="https://js.org/terms.html">Terms and Conditions</a> for more details.</p>
 
     <table class="hf">
         <tbody>
@@ -99,7 +99,7 @@
                     </a>
                 </td>
                 <td>
-                    <a class="gh" title="GitHub" rel="nofollow" target="_blank" href="https://github.com/js-org/dns.js.org">&#xe613;
+                    <a class="gh" title="GitHub" rel="nofollow" target="_blank" href="https://github.com/js-org/js.org">&#xe613;
                         <span id="ghstars" style="display: inline-block;"></span>
                     </a>
                 </td>
