--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>JS.ORG - Imprint</title>
+    <title>JS.ORG - Terms of Service</title>
     <meta name="description" content="Dedicated to JavaScript and its awesome community since 2015">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
