--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </tbody>
     </table>
 
-    <p id="typewriter">http://
+    <p id="typewriter">https://
         <span id="hermes">foo</span>.js.org</p>
     <p class="bigger">Are you a JavaScript developer looking for free webspace to host your project?
         <br>Check out
